[package]
name = "tui_2"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
alternate_screen_wrapper = { path="../alternate_screen_wrapper", features = ["crossterm"]}

ratatui = "0.28"
ratatui_inputs = { path="../ratatui-inputs/" }
s_text_input_f = "0.3"
serde = "1.0.208"
serde_json = "1.0.125"
s_text_input_f-parser = "0.1.0"
